# zecwallet-lite

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: electron.yml
native/: Cargo.toml
native/src/: lib.rs
public/: electron.js
src/: Routes.tsx  native.node.d.ts  rpc.ts
src/components/: AppState.ts  CustomPath.tsx  Dashboard.tsx  ErrorModal.tsx  LoadingScreen.tsx  Receive.tsx  Send.tsx  ServerSelectModal.tsx  Sidebar.tsx  WorkingModal.tsx
src/utils/: modalConfigs.ts  utils.ts
