[package]
name = "zecwallet-lite"
version = "0.1.0"
edition = "2018"
authors = ["Zecwallet"]
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]


[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6"]

[dependencies]
zecwalletlitelib = { git = "https://github.com/Zondax/zecwallet-light-cli", rev = "a580aa7826517b2fa0f8b06d4cb850de9a4a2f18" }
