[package]
name = "zecwallet-lite"
version = "0.1.0"
edition = "2018"
authors = ["Zecwallet"]
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]


[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6"]

[dependencies]
zecwalletlitelib = { git = "https://github.com/Zondax/zecwallet-light-cli", tag="v1.9.5-ledger" }
#zecwalletlitelib = { path = "../../zecwallet-light-cli/lib" }

[patch.crates-io]
zcash_address = { git = "https://github.com/Zondax/librustzcash", rev = "7b114829d07aa1806c65e55c8b63f89c0cd7080e"}
zcash_primitives = { git = "https://github.com/Zondax/librustzcash", rev = "7b114829d07aa1806c65e55c8b63f89c0cd7080e"}
zcash_client_backend = { git = "https://github.com/Zondax/librustzcash", rev = "7b114829d07aa1806c65e55c8b63f89c0cd7080e"}
zcash_note_encryption = { git = "https://github.com/Zondax/librustzcash", rev = "7b114829d07aa1806c65e55c8b63f89c0cd7080e"}
zcash_encoding = { git = "https://github.com/Zondax/librustzcash", rev = "7b114829d07aa1806c65e55c8b63f89c0cd7080e"}
zcash_proofs = { git = "https://github.com/Zondax/librustzcash", rev = "7b114829d07aa1806c65e55c8b63f89c0cd7080e"}
orchard = { git = "https://github.com/adityapk00/orchard", rev = "0a960a380f4e9c3472c9260f3df61cd5e50d51b0" }
